--- a/index.html
+++ b/index.html
@@ -13,7 +13,56 @@
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
 	<title>Nina Carducci | photographe professionnelle à Bordeaux</title>
-	<meta name="description" content="Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer. Grâce aux services de la professionnelle Nina Carducci basée à Bordeaux, vous pourrez garder ces moments pour l'éternité, shooting photo, retouches et album photos sont les prestations proposées. Réservez dès maintenant !">
+	<meta name="description" content="Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer. Grâce aux services de la professionnelle Nina Carducci basée à Bordeaux, vous pourrez garder ces moments pour l'éternité, shooting photo, retouches et album photos sont les prestations proposées. Réservez dès maintenant !" />
+	
+	<meta property="og:site_name" content="Nina Carducci | photographe professionnelle à Bordeaux" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://pierretoms.github.io/Nina-carducci/" />
+	<meta property="og:title" content="Nina Carducci | photographe professionnelle à Bordeaux" />
+	<meta property="og:description" content="Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer. Grâce aux services de la professionnelle Nina Carducci basée à Bordeaux, vous pourrez garder ces moments pour l'éternité, shooting photo, retouches et album photos sont les prestations proposées. Réservez dès maintenant !" />
+	<meta property="og:image" content="https://raw.githubusercontent.com/Pierretoms/Nina-carducci/refs/heads/main/assets/images/nina.webp" />
+	
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:site" content="@ninacarducci" />
+	<meta name="twitter:title" content="Nina Carducci photographe professionnelle à Bordeaux" />
+	<meta name="twitter:description" content="Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer. Grâce aux services de la professionnelle Nina Carducci basée à Bordeaux, vous pourrez garder ces moments pour l'éternité, shooting photo, retouches et album photos sont les prestations proposées. Réservez dès maintenant !" />
+	<meta name="twitter:image" content="https://raw.githubusercontent.com/Pierretoms/Nina-carducci/refs/heads/main/assets/images/nina.webp" />
+	<meta name="twitter:url" content="https://pierretoms.github.io/Nina-carducci/" />
+
+	<script type="application/ld+json">
+		{
+			"@context": "https://schema.org",
+			"@type": "LocalBusiness",
+			"name": "Nina Carducci Photographe",
+			"image": "https://raw.githubusercontent.com/Pierretoms/Nina-carducci/refs/heads/main/assets/images/nina.webp",
+			"@id": "https://raw.githubusercontent.com/Pierretoms/Nina-carducci/refs/heads/main/assets/images/nina.webp",
+			"url": "https://pierretoms.github.io/Nina-carducci/",
+			"telephone": "05 56 67 78 89",
+			"priceRange": "50€ 400€",
+			"address": {
+				"@type": "PostalAddress",
+				"streetAddress": "68 avenue Alsace-Lorraine",
+				"addressLocality": "Bordeaux",
+				"postalCode": "33200",
+				"addressCountry": "FR"
+			},
+			"openingHoursSpecification": {
+				"@type": "OpeningHoursSpecification",
+				"dayOfWeek": [
+					"Monday",
+					"Tuesday",
+					"Wednesday",
+					"Thursday",
+					"Friday"
+				],
+				"opens": "10:00",
+				"closes": "19:00"
+			}
+
+		}
+	</script>
+	
+	
 </head>
 <body>
 	<header>
