--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
 						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Photo de mariage prise au moment d'embrasser la mariée">
 					</div>
 				</div>
-				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-					<span class="carousel-control-prev-icon" aria-label="précédent"></span>
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" aria-label="précédent">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 				</button>
-				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-					<span class="carousel-control-next-icon" aria-label="suivant"></span>
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next" aria-label="suivant">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
 				</button>
 			</div>
 		</div>
