balise meta description changer / changement de balises h3 pour p / minifier css et js / nouveau lien pour les photos opengraph et twitter cards

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
 	<title>Nina Carducci | photographe professionnelle à Bordeaux</title>
-	<meta name="description" content="Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer. Grâce aux services de la professionnelle Nina Carducci basée à Bordeaux, vous pourrez garder ces moments pour l'éternité, shooting photo, retouches et album photos sont les prestations proposées. Réservez dès maintenant !" />
+	<meta name="description" content="Nina Carducci, photographe passionnée et talentueuse." />
 	
 	<meta property="og:site_name" content="Nina Carducci | photographe professionnelle à Bordeaux" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://pierretoms.github.io/Nina-carducci/" />
 	<meta property="og:title" content="Nina Carducci | photographe professionnelle à Bordeaux" />
-	<meta property="og:description" content="Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer. Grâce aux services de la professionnelle Nina Carducci basée à Bordeaux, vous pourrez garder ces moments pour l'éternité, shooting photo, retouches et album photos sont les prestations proposées. Réservez dès maintenant !" />
-	<meta property="og:image" content="https://raw.githubusercontent.com/Pierretoms/Nina-carducci/refs/heads/main/assets/images/nina.webp" />
+	<meta property="og:description" content="Nina Carducci, photographe passionnée et talentueuse." />
+	<meta property="og:image" content="https://pierretoms.github.io/Nina-carducci/assets/images/nina.webp" />
 	
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@ninacarducci" />
 	<meta name="twitter:title" content="Nina Carducci photographe professionnelle à Bordeaux" />
-	<meta name="twitter:description" content="Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer. Grâce aux services de la professionnelle Nina Carducci basée à Bordeaux, vous pourrez garder ces moments pour l'éternité, shooting photo, retouches et album photos sont les prestations proposées. Réservez dès maintenant !" />
-	<meta name="twitter:image" content="https://raw.githubusercontent.com/Pierretoms/Nina-carducci/refs/heads/main/assets/images/nina.webp" />
+	<meta name="twitter:description" content="Nina Carducci, photographe passionnée et talentueuse." />
+	<meta name="twitter:image" content="https://pierretoms.github.io/Nina-carducci/assets/images/nina.webp" />
 	<meta name="twitter:url" content="https://pierretoms.github.io/Nina-carducci/" />
 
 	<script type="application/ld+json">
@@ -34,7 +34,7 @@
 			"@context": "https://schema.org",
 			"@type": "LocalBusiness",
 			"name": "Nina Carducci Photographe",
-			"image": "https://raw.githubusercontent.com/Pierretoms/Nina-carducci/refs/heads/main/assets/images/nina.webp",
+			"image": "https://pierretoms.github.io/Nina-carducci/assets/images/nina.webp",
 			"@id": "https://raw.githubusercontent.com/Pierretoms/Nina-carducci/refs/heads/main/assets/images/nina.webp",
 			"url": "https://pierretoms.github.io/Nina-carducci/",
 			"telephone": "05 56 67 78 89",
@@ -136,7 +136,7 @@
 				<div class="quote">
 					<figure>
 						<blockquote>
-							<h2 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h2>
+							<p class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</p>
 						</blockquote>
 						<figcaption class="quote__author">- Richard Avedon</figcaption>
 					</figure>
@@ -181,7 +181,7 @@
 			<div class="quote">
 				<figure>
 					<blockquote>
-						<h2 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h2>
+						<p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
 					</blockquote>
 					<figcaption class="quote__author">- Richard Avedon</figcaption>
 				</figure>
