tentative 2.0 de faire passer le push precedent

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
 	<title>Nina Carducci | photographe professionnelle à Bordeaux</title>
-	<meta name="description" content="Nina Carducci, photographe passionnée et talentueuse." />
+	<meta name="description" content="Nina Carducci, photographe passionnée et talentueuse !" />
 	
 	<meta property="og:site_name" content="Nina Carducci | photographe professionnelle à Bordeaux" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://pierretoms.github.io/Nina-carducci/" />
 	<meta property="og:title" content="Nina Carducci | photographe professionnelle à Bordeaux" />
-	<meta property="og:description" content="Nina Carducci, photographe passionnée et talentueuse." />
+	<meta property="og:description" content="Nina Carducci, photographe passionnée et talentueuse !" />
 	<meta property="og:image" content="https://pierretoms.github.io/Nina-carducci/assets/images/nina.webp" />
 	
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@ninacarducci" />
 	<meta name="twitter:title" content="Nina Carducci photographe professionnelle à Bordeaux" />
-	<meta name="twitter:description" content="Nina Carducci, photographe passionnée et talentueuse." />
+	<meta name="twitter:description" content="Nina Carducci, photographe passionnée et talentueuse !" />
 	<meta name="twitter:image" content="https://pierretoms.github.io/Nina-carducci/assets/images/nina.webp" />
 	<meta name="twitter:url" content="https://pierretoms.github.io/Nina-carducci/" />
 
